@@ -5,6 +5,8 @@
 Gives a multi-value dictionary object (MultiDict) plus several wrappers
 """
 from collections import MutableMapping
+from collections import Mapping
+
 import warnings
 
 from webob.compat import (
@@ -478,6 +480,32 @@ class NoVars(object):
 
     __iter__ = iterkeys
 
+_immutable = 'This mapping is immutable; you must copy it and change the copy'
+
+class ImmutableDict(dict):
+
+    def __setitem__(self, key, value):
+        raise TypeError(_immutable)
+
+    def __delitem__(self, key):
+        raise TypeError(_immutable)
+
+    __marker = object()
+
+    def pop(self, key, default=__marker):
+        raise TypeError(_immutable)
+
+    def popitem(self):
+        raise TypeError(_immutable)
+
+    def clear(self):
+        raise TypeError(_immutable)
+
+    def update(self, other=(), **kwds):
+        raise TypeError(_immutable)
+
+    def setdefault(self, key, default=None):
+        raise TypeError(_immutable)
 
 def _hide_passwd(items):
     for k, v in items:
